                
02 Sep 2007 >>> RELEASED HOPELESS v0.2

03 Sep 2007     new example test/_input.hop demonstrates input from keyboard (stdin)
 
04 Sep 2007     fixed lib/lines.hop to skip '\r'
                new library lib/system.hop and lib/system_win.hop (functons "getc" and "gets")

11 Sep 2007     new library lib/string.hop (right now only to define type "string")
                added function "dir" to lib/system.hop and lib/system_win.hop

05 Apr 2008     new predefined list "env" with some environment variables for CGI

21 Jun 2008 >>> RELEASED HOPELESS v0.3

22 Jun 2008     separate file version.h for APPNAME and VERSION macros
                longer supported filenames (now 256 instead of 100)
                more simultaniously supported streams (now 100 instead of 20)
                restricted mode (-r) now allows reading, but disables running commands ("!...")
                now "mktemp" is used to create temporary filename for running commands
                more available variables in "env" for CGI mode

22 Jun 2008 >>> RELEASED HOPELESS v0.4

24 Jun 2008     added '\r' to function "isspace" in ctype.hop
                fixed function "dir" in system_win.hop

03 Jun 2009     path to libraries changed to /usr/local/share/hopeless
                created man file hopeless.1 (modified hope.1)
                fixed "make install" for Hopeless
                
28 Aug 2009     new library lib/db_sqlite.hop (database support with sqlite3)

29 Aug 2009     added functions "del" and "write_to" to lib/system.hop
                check for '\n' and '\r' before run commands ("!...")
                
03 Sep 2009     defined constant "stdin" instead of functions "getc" and "gets" (lib/system.hop)
                modified test _input.hop
                
06 Sep 2009	modified function "write_to" in lib/system.hop

03 Apr 2010	created git repository (original, v0.1, v0.2, v0.3, v0.4, current)
		fixed AUTHORS and README
		
04 Apr 2010 >>> RELEASED HOPELESS v0.5
		